--- a/index.html
+++ b/index.html
@@ -80,7 +80,44 @@
                     </div>
                 </div>
             </div>
-            <br>
+            <div id="section-part-3" class="container-section">
+                <div class="sec3-content">
+                    <div class="sec3-contitle">
+                        <h1>Adicione um novo titulo</h1>
+                        <p>Descreva aqui o serviço ou produto anunciado para que possa facilitar o entendimento do cliente</p>
+                    </div>
+                    <div class="row sec3-conheader">
+                        <div class="col-md-3 box">
+                            <a href="#">
+                                <p class="c-icon"><i class="fas fa-images"></i></p>
+                                <p class="c-tit">Pessoal ou Negócios</p>
+                                <p class="c-con">Inicie um novo texto, e deixe a criatividade tomar conta da sua mente.</p>
+                            </a>
+                        </div>
+                        <div class="col-md-3 box">
+                            <a href="#">
+                                <p class="c-icon"><i class="fas fa-images"></i></p>
+                                <p class="c-tit">Pessoal ou Negócios</p>
+                                <p class="c-con">Inicie um novo texto, e deixe a criatividade tomar conta da sua mente.</p>
+                            </a>
+                        </div>
+                        <div class="col-md-3 box">
+                            <a href="#">
+                                <p class="c-icon"><i class="fas fa-images"></i></p>
+                                <p class="c-tit">Pessoal ou Negócios</p>
+                                <p class="c-con">Inicie um novo texto, e deixe a criatividade tomar conta da sua mente.</p>
+                            </a>
+                        </div>
+                        <div class="col-md-3 box">
+                            <a href="#">
+                                <p class="c-icon"><i class="fas fa-images"></i></p>
+                                <p class="c-tit">Pessoal ou Negócios</p>
+                                <p class="c-con">Inicie um novo texto, e deixe a criatividade tomar conta da sua mente.</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <footer>
